--- a/action.yml
+++ b/action.yml
@@ -5,7 +5,7 @@ inputs:
     description: 'The keyword to search for in the file changes. Must not be empty.'
     required: true
     default: 'DO_NOT_SUBMIT'
-  allow_list:
+  check_list:
     description: 'A list of files to search for the keyword'
     required: true
     default: '*'
@@ -22,4 +22,4 @@ runs:
     - name: Check files for ${{ inputs.keyword }}
       id: check-files
       shell: bash
-      run: ./do-not-submit.sh ${{ inputs.keyword }} ${{ inputs.allow_list }} ${{ inputs.ignore_list }} ${{ steps.changed-files.outputs.all_changed_files }}
+      run: ./do-not-submit.sh ${{ inputs.keyword }} ${{ inputs.check_list }} ${{ inputs.ignore_list }} ${{ steps.changed-files.outputs.all_changed_files }}
