--- a/action.yml
+++ b/action.yml
@@ -16,6 +16,7 @@ inputs:
 runs:
   using: "composite"
   steps:
+    - uses: actions/checkout@v3 # checkout to use do-not-submit
     - name: Fetch changed files
       id: changed-files
       uses: tj-actions/changed-files@v37
