--- a/action.yml
+++ b/action.yml
@@ -16,13 +16,12 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - uses: actions/checkout@v3 # checkout to use do-not-submit
-      with:
-        fetch-depth: 0
+    - uses: actions/checkout@v3
     - name: Fetch changed files
       id: changed-files
       uses: tj-actions/changed-files@v37
     - name: Check files for ${{ inputs.keyword }}
       id: check-files
       shell: bash
+      working-directory: ./
       run: ./do-not-submit.sh ${{ inputs.keyword }} ${{ inputs.check_list }} ${{ inputs.ignore_list }} ${{ steps.changed-files.outputs.all_changed_files }}
