add exit code to action

--- a/action.yml
+++ b/action.yml
@@ -38,8 +38,10 @@ runs:
       shell: bash
       run: |
         echo "::warning ::Instances of the keyword '${{ inputs.keyword }}' were found in files, but the action was configured to succeed anyway."
+        exit 0
     - if: inputs.should_fail == 'true' && steps.check-files.outputs.KEYWORD_MATCHED == 'true'
       name: Failing if necessary
       shell: bash
       run: |
         echo "::error ::Instances of the keyword '${{ inputs.keyword }}' were found in files."
+        exit 1
