--- a/action.yml
+++ b/action.yml
@@ -28,4 +28,10 @@ runs:
       id: check-files
       shell: bash
       run: |
-        ${{ github.action_path }}/do-not-submit.sh ${{ inputs.keyword }} ${{ inputs.check_list }} ${{ inputs.ignore_list }} ${{ steps.changed-files.outputs.all_changed_files }}
+        if [[ ${{ inputs.should_fail }} == 'true' ]]; then
+          fail_type='fail'
+        else
+          fail_type='warn'
+        fi
+        
+        ${{ github.action_path }}/do-not-submit.sh ${{ inputs.keyword }} "$fail_type" ${{ inputs.check_list }} ${{ inputs.ignore_list }} ${{ steps.changed-files.outputs.all_changed_files }}
