--- a/action.yml
+++ b/action.yml
@@ -33,11 +33,15 @@ runs:
       shell: bash
       run: |
         if [[ ${{ inputs.should_fail }} == 'false' ]]; then
-          fail_type='-w'
+          warn_opt='-w'
+        else
+          warn_opt=''
         fi
         
         if [[ ${{ inputs.smart_search }} == 'false' ]]; then
           search_type='-x'
+        else
+          search_type=''
         fi
 
-        ${{ github.action_path }}/do-not-submit.sh -k ${{ inputs.keyword }} "$fail_type" "$search_type" -c ${{ inputs.check_list }} -i ${{ inputs.ignore_list }} ${{ steps.changed-files.outputs.all_changed_files }}
+        ${{ github.action_path }}/do-not-submit.sh -k ${{ inputs.keyword }} "${warn_opt}" "${search_type}" -c ${{ inputs.check_list }} -i ${{ inputs.ignore_list }} ${{ steps.changed-files.outputs.all_changed_files }}
